Dark-Form aggregate

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Practicando-HTML-CSS-JS",
   "version": "1.0.0",
-  "dependencies": {
+  "devDependencies": {
+    "prettier": "^2.8.0"
   }
 }
